final update chapel

--- a/index.html
+++ b/index.html
@@ -843,7 +843,7 @@ N’oubliez pas le SALON DE THE pour vous rafraichir et vous détendre.</p><a cl
 			<article id="main" class="container special">
 				<section id="chapelle"></section>
 				<h2>Chapelle </a></h2>
-				<a class="image featured"><img src="images/chapel.jpg" alt="" /></a>
+				<a class="image featured"><img src="images/chapel12.jpg" alt="" /></a>
 				<header>
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vitae metus urna. Donec aliquet aliquet mi, quis efficitur
 					 dolor convallis vel. Praesent rutrum rhoncus nisl, id laoreet augue aliquet a. Praesent varius pulvinar pellentesque. 
@@ -873,6 +873,14 @@ N’oubliez pas le SALON DE THE pour vous rafraichir et vous détendre.</p><a cl
 					Proin at ultricies purus, sit amet euismod justo. 
 				</p>
 				<a class="image featured"><img src="images/chapelcharacters.jpg" alt="" /></a><p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vitae metus urna. Donec aliquet aliquet mi, quis 
+					efficitur dolor convallis vel. Praesent rutrum rhoncus nisl, id laoreet augue aliquet a. Praesent varius pulvinar 
+					pellentesque. Mauris consequat ante ex, ut dignissim quam imperdiet non. Cras eu feugiat purus. Integer lobortis 
+					in sem non dapibus. Aenean dapibus eget nisl nec fermentum. Aliquam suscipit varius lacus in faucibus. Donec id tristique urna, 
+					vitae fermentum arcu. Duis ante neque, venenatis a sodales quis, pretium sit amet ante. Proin at ultricies purus, sit amet euismod justo. 
+					Cette salle symbolise  la grande vie de château au XIXe siècle, d'un côté les nobles se distrayant et de l'autre côté les domestiques à leur service. 
+				</p>
+				<a class="image featured"><img src="images/window chapel.jpg" alt="" /></a><p>
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vitae metus urna. Donec aliquet aliquet mi, quis 
 					efficitur dolor convallis vel. Praesent rutrum rhoncus nisl, id laoreet augue aliquet a. Praesent varius pulvinar 
 					pellentesque. Mauris consequat ante ex, ut dignissim quam imperdiet non. Cras eu feugiat purus. Integer lobortis 
