--- a/index.html
+++ b/index.html
@@ -1140,7 +1140,7 @@
 					 Aenean dapibus eget nisl nec fermentum. Aliquam suscipit varius lacus in faucibus. Donec id tristique urna, vitae fermentum arcu. 
 					 Duis ante neque, venenatis a sodales quis, pretium sit amet ante. Proin at ultricies purus, 
 					 sit amet euismod justo.
-				</p><a class="image featured"><img src="images/square5.jpg" alt="" /></a><p>
+				</p><a class="image featured"><img src="images/square5.JPG" alt="" /></a><p>
 					Donec aliquet aliquet mi, quis efficitur dolor convallis vel. Praesent rutrum rhoncus nisl, id laoreet augue aliquet a.
 					 Praesent varius pulvinar pellentesque. Mauris consequat ante ex, ut dignissim quam imperdiet non. Cras eu feugiat purus. 
 					 Integer lobortis in sem non dapibus. Aenean dapibus eget nisl nec fermentum. Aliquam suscipit varius lacus in faucibus. 
@@ -1149,7 +1149,7 @@
 				
 				 </p>
 				 
-				 <a class="image featured"><img src="images/square8.jpg" alt="" /></a><p>
+				 <a class="image featured"><img src="images/square8.JPG" alt="" /></a><p>
 
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vitae metus urna. Donec aliquet aliquet mi, 
 					quis efficitur dolor convallis vel. Praesent rutrum rhoncus nisl, id laoreet augue aliquet a. Praesent varius 
@@ -1158,7 +1158,7 @@
 					Donec id tristique urna, vitae fermentum arcu. Duis ante neque, venenatis a sodales quis, pretium sit amet ante. 
 					Proin at ultricies purus, sit amet euismod justo. 
 				</p>
-				<a class="image featured"><img src="images/square4.jpg" alt="" /></a><p>
+				<a class="image featured"><img src="images/square4.JPG" alt="" /></a><p>
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vitae metus urna. Donec aliquet aliquet mi, quis 
 					efficitur dolor convallis vel. Praesent rutrum rhoncus nisl, id laoreet augue aliquet a. Praesent varius pulvinar 
 					pellentesque. Mauris consequat ante ex, ut dignissim quam imperdiet non. Cras eu feugiat purus. Integer lobortis 
