--- a/english.html
+++ b/english.html
@@ -82,7 +82,7 @@
 							Welcome to the Château du Rocher Portail, considered one of the most beautiful castles in Brittany.
 							Built over 400 years ago, starting in 1596,
 							by Gilles RUELLAN, Breton of modest origin,
-							once unknown and went on to become one of the most
+							once unknown, went on to become one of the most
 							great financiers of France. He was an adviser and close friend of the king
 							HENRI IV, Queen Marie of the MEDICIS and Cardinal de
 							RICHELIEU.
@@ -140,14 +140,14 @@
 				</div>
 <!-- Carousel -->
 
-<h3><a>Rez-de-Chaussée</a></h3>
+<h3><a>Ground Floor</a></h3>
 <section class="carousel">
 	<div class="reel">
 
 		<article>
 			<a href="#numberone" class="image featured"><img src="images/entrance1.jpg" alt="" /></a>
 			<header>
-				<h3><a href="#numberone" >1. Entrée – Escalier d’honneur sud</a></h3>
+				<h3><a href="#numberone" >Entrance and Grand South Staircase</a></h3>
 			</header>
 			<p></p>
 		</article>
@@ -155,7 +155,7 @@
 		<article>
 			<a href="#numbertwo" class="image featured"><img src="images/guardspauline.JPG" alt="" /></a>
 			<header>
-				<h3><a href="#numbertwo">2. Salle des gardes</a></h3>
+				<h3><a href="#numbertwo">Guard Room</a></h3>
 			</header>
 			<p></p>
 		</article>
@@ -163,7 +163,7 @@
 		<article>
 			<a href="#numberthree" class="image featured"><img src="images/Diningx1.jpg" alt="" /></a>
 			<header>
-				<h3><a href="#numberthree">3. Salle à manger</a></h3>
+				<h3><a href="#numberthree">Dining Room</a></h3>
 			</header>
 			<p></p>
 		</article>
@@ -171,21 +171,21 @@
 		<article>
 			<a href="#numberfour" class="image featured"><img src="images/stairsothers2.JPG" alt="" /></a>
 			<header>
-				<h3><a href="#numberfour">4. L’escalier d’honneur nord, l’accès aux jardins et aux caves</a></h3>
+				<h3><a href="#numberfour">Grand North Staircase</a></h3>
 			</header>
 			<p></article>
 
 		<article>
 			<a href="#numberfive" class="image featured"><img src="images/ChambreDapparat1.jpg" alt="" /></a>
 			<header>
-				<h3><a href="#numberfive">5. La chambre d'apparat </a></h3>
+				<h3><a href="#numberfive">Pageantry Room</a></h3>
 			</header>
 			<p></article>
 
 		<article>
 			<a href="#numbersix" class="image featured"><img src="images/CabinetCurios.jpg" alt="" /></a>
 			<header>
-				<h3><a href="#numbersix">6. Le cabinet des curiosités</a></h3>
+				<h3><a href="#numbersix">The Curiosity Cabinet</a></h3>
 			</header>
 			<p></article>
 
@@ -322,14 +322,13 @@
 			<!-- Main -->
 			<p>
 	
-				Attention : Photos intérieurs interdites – Merci de laisser nos amis les animaux dans les véhicules
-				Dans un souci de conservation, merci de ne pas toucher au mobilier, tapisseries, murs et objets d’art. 
-				Ne pas s’asseoir sur les fauteuils et chaises historiques. Des tabourets noirs sont disponibles dans quelques pièces. 
-				Les enfants sont sous la responsabilité des parents – Risque de chutes et noyade
-				Pique-nique, dans les cours, château et jardins, interdit
-				Merci de laisser les  sacs à dos et sacs volumineux dans vos véhicules pour des raisons de sécurité.
-				Site sous vidéo surveillance
-					Fermeture à 18H 
+				Please note: It is forbidden to take photographs inside the Château. No animals. 
+To preserve the furniture, tapestries, walls, artworks and objects on display, please do not touch, and please do not sit on the historic furniture. Black stools are available in some of the rooms for seating.
+Risk of falls and drowning: Children are under the responsibility of parents or accompanying adults at all times.
+Picnicking is forbidden in the courtyards, Château and gardens.
+Please leave backpacks and large luggage items in your vehicle for security reasons.
+CCTV is in operation.
+The site closes at 6p.m.
 				
 			</p>
 			<div class="wrapper style2">
