--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 		<article>
 			<a href="#numberone" class="image featured"><img src="images/entrance1.jpg" alt="" /></a>
 			<header>
-				<h3><a href="#numberone" >1. Entrée – Escalier d’honneur sud</a></h3>
+				<h3><a href="#numberone" >Entrée – Escalier d’honneur sud</a></h3>
 			</header>
 			<p></p>
 		</article>
@@ -156,7 +156,7 @@
 		<article>
 			<a href="#numbertwo" class="image featured"><img src="images/guardspauline.JPG" alt="" /></a>
 			<header>
-				<h3><a href="#numbertwo">2. Salle des gardes</a></h3>
+				<h3><a href="#numbertwo">Salle des gardes</a></h3>
 			</header>
 			<p></p>
 		</article>
@@ -164,7 +164,7 @@
 		<article>
 			<a href="#numberthree" class="image featured"><img src="images/Diningx1.jpg" alt="" /></a>
 			<header>
-				<h3><a href="#numberthree">3. Salle à manger</a></h3>
+				<h3><a href="#numberthree">Salle à manger</a></h3>
 			</header>
 			<p></p>
 		</article>
@@ -172,21 +172,21 @@
 		<article>
 			<a href="#numberfour" class="image featured"><img src="images/stairsothers2.JPG" alt="" /></a>
 			<header>
-				<h3><a href="#numberfour">4. L’escalier d’honneur nord, l’accès aux jardins et aux caves</a></h3>
+				<h3><a href="#numberfour">L’escalier d’honneur nord, l’accès aux jardins et aux caves</a></h3>
 			</header>
 			<p></article>
 
 		<article>
 			<a href="#numberfive" class="image featured"><img src="images/ChambreDapparat1.jpg" alt="" /></a>
 			<header>
-				<h3><a href="#numberfive">5. La chambre d'apparat </a></h3>
+				<h3><a href="#numberfive">La chambre d'apparat </a></h3>
 			</header>
 			<p></article>
 
 		<article>
 			<a href="#numbersix" class="image featured"><img src="images/CabinetCurios.jpg" alt="" /></a>
 			<header>
-				<h3><a href="#numbersix">6. Le cabinet des curiosités</a></h3>
+				<h3><a href="#numbersix">Le cabinet des curiosités</a></h3>
 			</header>
 			<p></article>
 
@@ -204,28 +204,28 @@
 		<article>
 			<a href="#numberseven" class="image featured"><img src="images/RoomGuilles.jpg" alt="" /></a>
 			<header>
-				<h3><a href="#seven">7. La chambre seigneuriale de Gilles RUELLAN</a></h3>
+				<h3><a href="#seven">La chambre seigneuriale de Gilles RUELLAN</a></h3>
 			</header>
 			<p></article>
 
 		<article>
 			<a href="#numbereight" class="image featured"><img src="images/robe.JPG" alt="" /></a>
 			<header>
-				<h3><a href="#numbereight">8. La garde-robe de Gilles RUELLAN</a></h3>
+				<h3><a href="#numbereight">La garde-robe de Gilles RUELLAN</a></h3>
 			</header>
 			<p></article>
 
 		<article>
 			<a href="#numbernine" class="image featured"><img src="images/privatesalle.jpg" alt="" /></a>
 			<header>
-				<h3><a href="#numbernine">9. La galerie privée (non ouvert à la visite)</a></h3>
+				<h3><a href="#numbernine">La galerie privée (non ouvert à la visite)</a></h3>
 			</header>
 			<p></article>
 
 		<article>
 			<a href="#number11" class="image featured"><img src="images/grandsalonpeoplemeeting.jpg" alt="" /></a>
 			<header>
-				<h3><a href="#number11">11. Le grand salon </a></h3>
+				<h3><a href="#number11">Le grand salon </a></h3>
 			</header>
 			<p></p>
 		</article>
@@ -233,21 +233,21 @@
 		<article>
 			<a href="#number12" class="image featured"><img src="images/pooltable.JPG" alt="" /></a>
 			<header>
-				<h3><a href="#number12">12. La salle de jeux</a></h3>
+				<h3><a href="#number12">La salle de jeux</a></h3>
 			</header>
 			<p></p>
 		</article>
 		<article>
 			<a href="#number13" class="image featured"><img src="images/Doorbells.JPG" alt="" /></a>
 			<header>
-				<h3><a href="#number13">13. Tableau du majordome Symbole</a></h3>
+				<h3><a href="#number13">Tableau du majordome Symbole</a></h3>
 			</header>
 			<p></article>
 		
 		<article>
 			<a href="#number14" class="image featured"><img src="images/guestroomlights.JPG" alt="" /></a>
 			<header>
-				<h3><a href="#number14">14. Couloir des domestiques et suite de chambres nobles</a></h3>
+				<h3><a href="#number14">Couloir des domestiques et suite de chambres nobles</a></h3>
 			</header>
 			<p></p>
 		</article>
