--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 		<article>
 			<a href="#number15" class="image featured"><img src="images/stairsmaids.JPG" alt="" /></a>
 			<header>
-				<h3><a href="#number15">15. Escalier des domestiques</a></h3>
+				<h3><a href="#number15">Escalier des domestiques</a></h3>
 			</header>
 			<p></p>
 		</article>
@@ -277,14 +277,14 @@
 		<article>
 			<a href="#number16" class="image featured"><img src="images/maidroom32.jpg" alt="" /></a>
 			<header>
-				<h3><a href="#number16">16. Suite de chambre des domestiques</a></h3>
+				<h3><a href="#number16">Suite de chambre des domestiques</a></h3>
 			</header>
 			<p> 	</article>
 		
 		<article>
 			<a href="#number17" class="image featured"><img src="images/maids.JPG" alt="" /></a>
 			<header>
-				<h3><a href="#number17">17. Salle de bain des domestiques</a></h3>
+				<h3><a href="#number17">Salle de bain des domestiques</a></h3>
 			</header>
 			<p></p>
 		</article>
@@ -292,7 +292,7 @@
 		<article>
 			<a href="#number18" class="image featured"><img src="images/carsonroom.jpg" alt="" /></a>
 			<header>
-				<h3><a href="#number18">18. Bureau du majordome</a></h3>
+				<h3><a href="#number18">Bureau du majordome</a></h3>
 			</header>
 			<p></p>
 		</article>
@@ -302,7 +302,7 @@
 		<article>
 			<a href="#number19" class="image featured"><img src="images/StairsChapel.jpg" alt="" /></a>
 			<header>
-				<h3><a href="#number19">19. Sortie et Fin de la Visite des Interieurs</a></h3>
+				<h3><a href="#number19">Sortie et Fin de la Visite des Interieurs</a></h3>
 			</header>
 			<p></p>
 		</article>
