--- a/english.html
+++ b/english.html
@@ -203,28 +203,28 @@
 		<article>
 			<a href="#numberseven" class="image featured"><img src="images/RoomGuilles.jpg" alt="" /></a>
 			<header>
-				<h3><a href="#seven">7. La chambre seigneuriale de Gilles RUELLAN</a></h3>
+				<h3><a href="#seven">Gille Ruellan's Lord's Chamber</a></h3>
 			</header>
 			<p></article>
 
 		<article>
 			<a href="#numbereight" class="image featured"><img src="images/robe.JPG" alt="" /></a>
 			<header>
-				<h3><a href="#numbereight">8. La garde-robe de Gilles RUELLAN</a></h3>
+				<h3><a href="#numbereight">Gille Ruellan's Dressing Room</a></h3>
 			</header>
 			<p></article>
 
 		<article>
 			<a href="#numbernine" class="image featured"><img src="images/privatesalle.jpg" alt="" /></a>
 			<header>
-				<h3><a href="#numbernine">9. La galerie privée (non ouvert à la visite)</a></h3>
+				<h3><a href="#numbernine">The Private Gallery or the "Gallery of Arts and Pleasure" (currently closed from the public)</a></h3>
 			</header>
 			<p></article>
 
 		<article>
 			<a href="#number11" class="image featured"><img src="images/grandsalonpeoplemeeting.jpg" alt="" /></a>
 			<header>
-				<h3><a href="#number11">11. Le grand salon </a></h3>
+				<h3><a href="#number11">The Grand Salon</a></h3>
 			</header>
 			<p></p>
 		</article>
@@ -232,21 +232,21 @@
 		<article>
 			<a href="#number12" class="image featured"><img src="images/pooltable.JPG" alt="" /></a>
 			<header>
-				<h3><a href="#number12">12. La salle de jeux</a></h3>
+				<h3><a href="#number12">The Game Room</a></h3>
 			</header>
 			<p></p>
 		</article>
 		<article>
 			<a href="#number13" class="image featured"><img src="images/Doorbells.JPG" alt="" /></a>
 			<header>
-				<h3><a href="#number13">13. Tableau du majordome Symbole</a></h3>
+				<h3><a href="#number13">The Butler's Bell Panel</a></h3>
 			</header>
 			<p></article>
 		
 		<article>
 			<a href="#number14" class="image featured"><img src="images/guestroomlights.JPG" alt="" /></a>
 			<header>
-				<h3><a href="#number14">14. Couloir des domestiques et suite de chambres nobles</a></h3>
+				<h3><a href="#number14">Noble's Guest Suites and Servant's Corridor</a></h3>
 			</header>
 			<p></p>
 		</article>
@@ -268,7 +268,7 @@
 		<article>
 			<a href="#number15" class="image featured"><img src="images/stairsmaids.JPG" alt="" /></a>
 			<header>
-				<h3><a href="#number15">15. Escalier des domestiques</a></h3>
+				<h3><a href="#number15">Staff Staircase</a></h3>
 			</header>
 			<p></p>
 		</article>
@@ -276,14 +276,14 @@
 		<article>
 			<a href="#number16" class="image featured"><img src="images/maidroom32.jpg" alt="" /></a>
 			<header>
-				<h3><a href="#number16">16. Suite de chambre des domestiques</a></h3>
+				<h3><a href="#number16">Staff Quarters</a></h3>
 			</header>
 			<p> 	</article>
 		
 		<article>
 			<a href="#number17" class="image featured"><img src="images/maids.JPG" alt="" /></a>
 			<header>
-				<h3><a href="#number17">17. Salle de bain des domestiques</a></h3>
+				<h3><a href="#number17">Staff Bathroom</a></h3>
 			</header>
 			<p></p>
 		</article>
@@ -291,7 +291,7 @@
 		<article>
 			<a href="#number18" class="image featured"><img src="images/carsonroom.jpg" alt="" /></a>
 			<header>
-				<h3><a href="#number18">18. Bureau du majordome</a></h3>
+				<h3><a href="#number18">The Butler's Office</a></h3>
 			</header>
 			<p></p>
 		</article>
@@ -301,7 +301,7 @@
 		<article>
 			<a href="#number19" class="image featured"><img src="images/StairsChapel.jpg" alt="" /></a>
 			<header>
-				<h3><a href="#number19">19. Sortie et Fin de la Visite des Interieurs</a></h3>
+				<h3><a href="#number19">End of the Visit</a></h3>
 			</header>
 			<p></p>
 		</article>
@@ -321,12 +321,13 @@
 
 			<!-- Main -->
 			<p>
-	
-				Please note: It is forbidden to take photographs inside the Château. No animals. 
-To preserve the furniture, tapestries, walls, artworks and objects on display, please do not touch, and please do not sit on the historic furniture. Black stools are available in some of the rooms for seating.
+				<a class="image featured"><img src="images/picturePoseoutside.jpg" alt="" /></a>
+				Please note: It is forbidden to take photographs inside the Château. Animals are prohibited. 
+To preserve the furniture, tapestries, walls, artworks and objects on display, please do not touch, use and sit on the historic furniture. 
+Black stools are available in some of the rooms for resting.
 Risk of falls and drowning: Children are under the responsibility of parents or accompanying adults at all times.
 Picnicking is forbidden in the courtyards, Château and gardens.
-Please leave backpacks and large luggage items in your vehicle for security reasons.
+Please leave backpacks and large luggage items in your vehicles for security reasons.
 CCTV is in operation.
 The site closes at 6p.m.
 				
@@ -335,9 +336,10 @@ The site closes at 6p.m.
 
 				<article id="main" class="container special">
 					<section id="numberone"></section>
-					<h2>Entrée</a></h2>
-					<a class="image featured"><img src="images/picturePoseoutside.jpg" alt="" /></a>
+					<h2>Entrance and Grand South Staircase</a></h2>
+					
 					<header>
+						<a class="image featured"><img src="images/entrance5.JPG" alt="" /></a>
 						<p>
 							Cet escalier est l’un des premiers escaliers à paliers dit « rampe sur rampe » de Bretagne
 							L’espace sur la droite dit «  de transport »  permettait aux gardes d’accéder à plusieurs pièces
