--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
 
 			<!-- Main -->
 			<p>
-	
+				<a class="image featured"><img src="images/picturePoseoutside.jpg" alt="" /></a>
 				Attention : Photos intérieurs interdites – Merci de laisser nos amis les animaux dans les véhicules
 				Dans un souci de conservation, merci de ne pas toucher au mobilier, tapisseries, murs et objets d’art. 
 				Ne pas s’asseoir sur les fauteuils et chaises historiques. Des tabourets noirs sont disponibles dans quelques pièces. 
@@ -338,8 +338,9 @@
 				<article id="main" class="container special">
 					<section id="numberone"></section>
 					<h2>Entrée</a></h2>
-					<a class="image featured"><img src="images/picturePoseoutside.jpg" alt="" /></a>
+				
 					<header>
+						<a class="image featured"><img src="images/entrance5.JPG" alt="" /></a>
 						<p>
 							Cet escalier est l’un des premiers escaliers à paliers dit « rampe sur rampe » de Bretagne
 							L’espace sur la droite dit «  de transport »  permettait aux gardes d’accéder à plusieurs pièces
