--- a/italiano.html
+++ b/italiano.html
@@ -17,45 +17,45 @@
 					<!-- Inner -->
 						<div class="inner">
 							<header>
-								<p>Welcome</p>
+								<p>Benvenuti a tutti</p>
 								<h1><a href="index.html" id="logo">Château Le Rocher Portail</a></h1>
 								<hr />	
 							</header>
 							<footer>
-								<a href="#banner" class="button circled scrolly">Start</a>
+								<a href="#banner" class="button circled scrolly">Inizio</a>
 							</footer>
 						</div>
 
 					<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="english.html">Home</a></li>
+							<li><a href="english.html">Accoglienza</a></li>
 							<li>
-								<a href="#features">Visit Guide</a>
+								<a href="#features">Visita la guida</a>
 								<ul>
 									<li>
-										<a href="#Interiors">Interiors</a>
+										<a href="#Interiors">Interni del castello</a>
 										<ul>
-											<li><a href="#numbertwo">Ground Floor</a></li>
-											<li><a href="#numberseven">Second Floor</a></li>
-											<li><a href="#number13">Attics</a></li>
-											<li><a href="#number19">Tea Salon</a></li>
+											<li><a href="#numbertwo">Piano terra</a></li>
+											<li><a href="#numberseven">Secondo Piano</a></li>
+											<li><a href="#number13">Attici</a></li>
+											<li><a href="#number19">Salone da tè</a></li>
 										</ul>
 									</li>
 									<li>
-										<a href="#Exteriors">Exteriors</a>
+										<a href="#Exteriors">Esterni</a>
 									<ul>
-										<li><a href="#chapelle">Chapel</a></li>
-										<li><a href="#communs">Courtyard</a></li>
-										<li><a href="#jardins">Gardens</a></li>
-										<li><a href="#pavillion">Pavillion</a></li>
-										<li><a href="#potager">Orchard</a></li>
+										<li><a href="#chapelle">Cappella</a></li>
+										<li><a href="#communs">Cortile</a></li>
+										<li><a href="#jardins">Giardini</a></li>
+										<li><a href="#pavillion">Padiglione </a></li>
+										<li><a href="#potager">Orto</a></li>
 									</ul><li>
-										<a href="#Evenements">Events</a>
+										<a href="#Evenements">Eventi</a>
 									<ul>
-										<li><a href="#nuits">Nights at the Castle</a></li>
-										<li><a href="#expositions">Expositions</a></li>
-										<li><a href="#noel">Christmas at the Castle</a></li>
+										<li><a href="#nuits">Notturni al castello</a></li>
+										<li><a href="#expositions">Mostre</a></li>
+										<li><a href="#noel">Feerries al Castello</a></li>
 									</ul>
 
 								</ul>
@@ -63,8 +63,8 @@
 							<li><a href="german.html">Deutsche</a></li>
 							<li><a href="index.html">Francais</a></li>
 							<li><a href="spanish.html">Español</a></li>
-							<li><a href="italiano.html">Italiano</a></li>
-							<li><a href="https://lerocherportail.fr/pages/art-sculpture-exposition-bretagne-131.php">This Season</a></li>
+							<li><a href="english.html">English</a></li>
+							<li><a href="https://lerocherportail.fr/pages/art-sculpture-exposition-bretagne-131.php">Questa stagione</a></li>
 						</ul>
 					</nav>
 
@@ -73,19 +73,19 @@
 			<!-- Banner -->
 				<section id="banner">
 					<header>
-						<h2>Visit Guide</h2>
+						<h2>Guida turistica</h2>
 						<a  class="image featured"><img src="images/logo.png" alt="" /></a>
 					</header>
 					<header>
-						<h2>400 years of French history<br><strong>Le Château du Rocher Portail</strong>.</h2>
+						<h2>400 anni di storia francese<br><strong>Le Château du Rocher Portail</strong>.</h2>
 						<p>
-							Welcome to the Château du Rocher Portail, considered one of the most beautiful castles in Brittany.
-							Built over 400 years ago, starting in 1596,
-							by Gilles RUELLAN, Breton of modest origin,
-							once unknown, went on to become one of the most
-							great financiers of France. He was an adviser and close friend of the king
-							HENRI IV, Queen Marie of the MEDICIS and Cardinal de
-							RICHELIEU.
+							Benvenuti allo Château du Rocher Portail, considerato uno dei castelli più belli della Bretagna.
+Costruito oltre 400 anni fa, a partire dal 1596,
+di Gilles RUELLAN, bretone di modeste origini,
+una volta sconosciuto, è diventato uno dei più
+grandi finanzieri di Francia. Era un consigliere e amico intimo del re
+ENRI IV, Regina Maria dei MEDICI e Cardinale de
+RICHELIEU. 
 							<br>
 						</p>
 					</header>
@@ -106,7 +106,7 @@
 							<article class="col-4 col-12-mobile special">
 								
 								<header>
-									<h2>Interiors</h2>
+									<h2>Interno</h2>
 									<br></br>
 									<h3><a>Ground floor</a></h3>
 									<a class="image featured"><img src="images/floorfirst.jpg" alt="" /></a>
