--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 					<!-- Nav -->
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Home</a></li>
+							<li><a href="index.html">Accueil</a></li>
 							<li>
 								<a href="#features">Guide de visite</a>
 								<ul>
