--- a/english.html
+++ b/english.html
@@ -195,7 +195,7 @@
 
 
 
-<h3><a>Étage</a></h3>
+<h3><a>Second Floor</a></h3>
 	<section class="carousel">
 		<div class="reel">
 
@@ -259,7 +259,7 @@
 
 
 
-<h3><a>Combles</a></h3>
+<h3><a>Attic</a></h3>
 <section class="carousel">
 	<div class="reel">
 
