--- a/german.html
+++ b/german.html
@@ -942,7 +942,7 @@
 
 				</section>
 				<header>
-					<h2>Exteriors</h2>
+					<h2>Außen</h2>
 					
 				</header>
 
@@ -950,7 +950,7 @@
 					<header>
 					<section id="Exteriors">
 							<header>
-								<h3><a>Exteriors of the Castle</a></h3>
+								<h3><a>Außenbereiche des Schlosses</a></h3>
 								<a  class="image featured"><img src="images/Drone.jpg" alt="" /></a>
 								<a  class="image featured"><img src="images/outsideGuide.jpg" alt="" /></a>
 							</header>
@@ -967,7 +967,7 @@
 					<article>
 						<a href="#chapelle" class="image featured"><img src="images/chapel12.jpg" alt="" /></a>
 						<header>
-							<h3><a href="#chapelle">The Chapel</a></h3>
+							<h3><a href="#chapelle">Die Kapelle</a></h3>
 						</header>
 						<p></p>
 					</article>
@@ -975,7 +975,7 @@
 					<article>
 						<a href="#communs" class="image featured"><img src="images/square8.JPG" alt="" /></a>
 						<header>
-							<h3><a href="#communs">Orchard and Kitchen Garden.</a></h3>
+							<h3><a href="#communs">The Courtyard.</a></h3>
 						</header>
 						<p></p>
 					</article>
