--- a/english.html
+++ b/english.html
@@ -18,7 +18,7 @@
 						<div class="inner">
 							<header>
 								<p>Welcome</p>
-								<h1><a href="index.html" id="logo">Château Le Rocher Portail</a></h1>
+								<h1><a href="english.html" id="logo">Château Le Rocher Portail</a></h1>
 								<hr />	
 							</header>
 							<footer>
