--- a/italiano.html
+++ b/italiano.html
@@ -95,7 +95,7 @@ RICHELIEU.
 			
 				<div class="wrapper style1">
 
-					<section id="features" class="container special">
+					<section id="Storia" class="container special">
 						<div class="row">
 						<section id="Storia">
 							<article class="col-4 col-12-mobile special">
