--- a/english.html
+++ b/english.html
@@ -964,7 +964,7 @@ The site closes at 6p.m.
 					</header>
 
 					<p>
-						One of the first in Brittany, it’s number was 4.
+						One of the first in Brittany,
 						The similarity between the the domestic staff’s quarters at Le Rocher Portail and those portrayed in the hit series 
 						Downton Abbey are striking. 
 					</p>
