--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 										<li><a href="#nuits">Nocturnes</a></li>
 										<li><a href="#expositions">Expositions</a></li>
 										<li><a href="#noel">Les Féeries de Noël</a></li>
-										<li><a href="#patrimonie">Les Féeries de Noël</a></li>
+										<li><a href="#patrimonie">Les journées du patrimoine</a></li>
 
 									</ul>
 
