--- a/english.html
+++ b/english.html
@@ -984,7 +984,7 @@ The site closes at 6p.m.
 				</section>
 				</article>
 				
-			</div>
+		
 			<article id="main" class="container special">
 				<section id="number19"></section>
 				<h2>End of the Visit – Exit</a></h2>
@@ -1021,6 +1021,7 @@ The site closes at 6p.m.
 				</footer>
 			</section>
 			</article>
+		</div>
 
 
 
@@ -1105,7 +1106,7 @@ The site closes at 6p.m.
 			</section>		
 
 
-
+			<div class="wrapper style2">
 			<article id="main" class="container special">
 				<section id="chapelle"></section>
 				<h2>The Chapel</a></h2>
@@ -1346,7 +1347,7 @@ The site closes at 6p.m.
 				</footer>
 			</section>
 			</article>
-
+		</div>
 
 
 
@@ -1415,7 +1416,7 @@ The site closes at 6p.m.
 					</article>			
 				</div>
 			</section>		
-
+			<div class="wrapper style2">
 			<article id="main" class="container special">
 				<section id="nuits"></section>
 				<h2>Nights at the Castle</a></h2>
@@ -1589,6 +1590,7 @@ The site closes at 6p.m.
 				</footer>
 			</section>
 			</article>
+		</div>
 
 
 
