--- a/spanish.html
+++ b/spanish.html
@@ -1190,7 +1190,7 @@ A partir del siglo XVII, se vuelve un santo dinástico, de amplitud nacional, pr
 
 			<article id="main" class="container special">
 				<section id="communs"></section>
-				<h2>Courtyard</a></h2>
+				<h2>Patio</a></h2>
 				<a class="image featured"><img src="images/square1.jpg" alt="" /></a>
 				<header>
 					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus vitae metus urna. Donec aliquet aliquet mi, quis efficitur
