--- a/index.html
+++ b/index.html
@@ -967,7 +967,6 @@
 				</section>
 				</article>
 				
-			</div>
 			<article id="main" class="container special">
 				<section id="number19"></section>
 				<h2>Fin de la visite - Sortie</a></h2>
@@ -1003,7 +1002,7 @@
 				</footer>
 			</section>
 			</article>
-
+		</div>
 
 
 
@@ -1087,7 +1086,7 @@
 			</section>		
 
 
-
+			<div class="wrapper style2">
 			<article id="main" class="container special">
 				<section id="chapelle"></section>
 				<h2>Chapelle </a></h2>
@@ -1241,7 +1240,7 @@ Il s'agit d'un toit en forme de dôme, tel que Catherine de Médicis avait const
 			</section>
 			</article>
 
-
+		</div>
 
 
 
@@ -1317,6 +1316,7 @@ Il s'agit d'un toit en forme de dôme, tel que Catherine de Médicis avait const
 				</div>
 			</section>		
 
+			<div class="wrapper style2">
 			<article id="main" class="container special">
 				<section id="nuits"></section>
 				<h2>Nocturnes</a></h2>
@@ -1449,7 +1449,7 @@ Tout le week-end, Association Vikings et Chevaliers (pdf) animeront un marché f
 					</footer>
 				</section>
 				</article>
-
+			</div>
 
 
 
