--- a/spanish.html
+++ b/spanish.html
@@ -1644,7 +1644,7 @@ Tiro con arco y búsqueda del tesoro "Robin Hood", animales "Alicia en el huerto
 								<!-- Copyright -->
 									<div class="copyright">
 										<ul class="menu">
-											<li>&copy; Château du Rocher Portail 2021</li><li>Developed by: <a href="https://techbzh.com">TechBzh.com</a> <br>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+											<li>&copy; Château du Rocher Portail 2021</li><li>Developed by: <a href="https://carlosvsanluis.github.io">Carlos San Luis</a> <br>Design: <a>HTML5 UP</a></li>
 										</ul>
 									</div>
 
