--- a/german.html
+++ b/german.html
@@ -1522,7 +1522,7 @@ für Tag des Erbes oder Les Journées du Patrimoine.
 								<!-- Copyright -->
 									<div class="copyright">
 										<ul class="menu">
-											<li>&copy; Château du Rocher Portail 2021</li><li>Developed by: <a href="https://techbzh.com">TechBzh.com</a> <br>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+											<li>&copy; Château du Rocher Portail 2021</li><li>Developed by: <a href="https://carlosvsanluis.github.io">Carlos San Luis</a> <br>Design: HTML5 UP</a></li>
 										</ul>
 									</div>
 
