--- a/index.html
+++ b/index.html
@@ -1590,7 +1590,7 @@ Tout le week-end, Association Vikings et Chevaliers animeront un marché face au
 								<!-- Copyright -->
 									<div class="copyright">
 										<ul class="menu">
-											<li>&copy; Château du Rocher Portail 2021</li><li>Developed by: <a href="https://techbzh.com">TechBzh.com</a> <br>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+											<li>&copy; Château du Rocher Portail 2021</li><li>Developed by: <a href="https://carlosvsanluis.github.io">Carlos San Luis</a><br>Design: HTML5 UP</a></li>
 										</ul>
 									</div>
 
